Fazendo teste com as requisições GET, POST

--- a/Front/Cliente/ControlSystem/src/app/module/users/form-user/form-user.component.html
+++ b/Front/Cliente/ControlSystem/src/app/module/users/form-user/form-user.component.html
@@ -10,6 +10,13 @@
         <input matInput formControlName="senha" type="password" placeholder="Sua Senha aqui">
     </mat-form-field>
     <br>
+    <mat-form-field class="w-75">
+        <mat-label>Email</mat-label>
+        <input matInput formControlName="email" type="email" placeholder="Seu email aqui">
+    </mat-form-field>
+    <br>
+    <mat-checkbox formControlName="ativado">Ativar Conta</mat-checkbox>
+    <br>
     <mat-form-field class="invisible" hidden>
         <input matInput type="number" formControlName="id">
     </mat-form-field>
