--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
@@ -11,6 +11,15 @@
       <th mat-header-cell *matHeaderCellDef> Senha </th>
       <td mat-cell *matCellDef="let element"> {{element.senha}} </td>
     </ng-container>
+    <ng-container matColumnDef="email">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="ativo">
+      <th mat-header-cell *matHeaderCellDef> Ativo/Desativo </th>
+      <td mat-cell *matCellDef="let element"> {{element.ativo ?'Ativado': 'Desativado'}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="Edit">
         <th mat-header-cell *matHeaderCellDef> Ações </th>
