Criando pagina de erro no programa e personalizando rotas de acesso no front

--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
@@ -1,1 +1,1 @@
-<button (click)="OpenDialog()" >Abrir</button>
+<button mat-flat-button color="primary" (click)="OpenDialog()" >Criar Usuario</button>
