--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
@@ -18,7 +18,7 @@
 
     <ng-container matColumnDef="ativo">
       <th mat-header-cell *matHeaderCellDef> Ativo/Desativo </th>
-      <td mat-cell *matCellDef="let element"> {{element.ativo ?'Ativado': 'Desativado'}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.ativado ?'Ativado': 'Desativado'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Edit">
