--- a/Front/Cliente/ControlSystem/src/app/page/home/home.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/home/home.component.html
@@ -1,8 +1,1 @@
-<mat-sidenav-container class="w-100 h-100">
-    <mat-sidenav mode="side" opened class="ajuste">
-        <app-menu></app-menu>
-    </mat-sidenav>
-    <mat-sidenav-content>
-        <router-outlet></router-outlet>
-    </mat-sidenav-content>
-</mat-sidenav-container>
+Home
