--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
@@ -1,1 +1,52 @@
-<button mat-flat-button color="primary" (click)="OpenDialog()" >Criar Usuario</button>
+<button mat-flat-button color="primary" (click)="OpenDialog()">Criar Usuario</button>
+<table mat-table [dataSource]="dataSource" class="w-100">
+                    <ng-container matColumnDef="nome">
+                                        <th mat-header-cell *matHeaderCellDef> Nome </th>
+                                        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="email">
+                                        <th mat-header-cell *matHeaderCellDef> Email </th>
+                                        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+                    </ng-container>
+                    <ng-container matColumnDef="telefone">
+                                        <th mat-header-cell *matHeaderCellDef> Email </th>
+                                        <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="rua">
+                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <td mat-cell *matCellDef="let element">
+                                                            {{element.rua}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="CEP">
+                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <td mat-cell *matCellDef="let element">
+                                                            {{element.rua}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="cidade">
+                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <td mat-cell *matCellDef="let element">
+                                                            {{element.rua}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="estado">
+                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <td mat-cell *matCellDef="let element">
+                                                            {{element.rua}} </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Edit">
+                                        <th mat-header-cell *matHeaderCellDef> Ações </th>
+                                        <td mat-cell *matCellDef="let element">
+                                                            <button mat-flat-button color=""
+                                                                                (click)="EditDialog(element)">Editar</button>
+                                                            <button mat-flat-button color="warn"
+                                                                                (click)="deletaCliente(element)">Deletar</button>
+                                        </td>
+                    </ng-container>
+
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
