--- a/Front/Cliente/ControlSystem/src/styles.scss
+++ b/Front/Cliente/ControlSystem/src/styles.scss
@@ -16,6 +16,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     width: 75%;
 }
 
+.w-50{
+    width: 50%;
+}
+
+.w-25{
+    width: 25%;
+}
+
 .m-top-10{
     margin-top: 10%;
 }
