inicinado a biblioteca de autenticacao e iniciando a comunicação com a genete-cliente page

--- a/Front/Cliente/ControlSystem/src/app/module/cliente/component/form-cliente/form-cliente.component.html
+++ b/Front/Cliente/ControlSystem/src/app/module/cliente/component/form-cliente/form-cliente.component.html
@@ -18,7 +18,7 @@
     <mat-form-field class="w-75">
         <mat-label>CEP</mat-label>
         <input matInput formControlName="cep" type="text" placeholder="000000000" 
-        (keyup.enter)="searchCEP()" maxlength="9">
+        (keydown.Tab)="searchCEP()" maxlength="9">
     </mat-form-field>
 
     <div class="w-100 separa">
