--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
@@ -16,19 +16,19 @@
                     <ng-container matColumnDef="rua">
                                         <th mat-header-cell *matHeaderCellDef> Rua </th>
                                         <td mat-cell *matCellDef="let element">
-                                                            {{element.rua}} </td>
+                                                            {{element.endereco.rua}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="CEP">
-                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <th mat-header-cell *matHeaderCellDef> Cep </th>
                                         <td mat-cell *matCellDef="let element">
-                                                            {{element.rua}} </td>
+                                                            {{element.endereco.cep}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="cidade">
-                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
+                                        <th mat-header-cell *matHeaderCellDef> Cidade </th>
                                         <td mat-cell *matCellDef="let element">
-                                                            {{element.rua}} </td>
+                                                            {{element.endereco.cidade}} </td>
                     </ng-container>
 
                     <ng-container matColumnDef="estado">
