--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-cliente/gerencia-cliente.component.html
@@ -1,52 +1,51 @@
-<button mat-flat-button color="primary" (click)="OpenDialog()">Criar Usuario</button>
+<button mat-flat-button color="primary" (click)="OpenDialog()">Criar Cliente</button>
+
 <table mat-table [dataSource]="dataSource" class="w-100">
-                    <ng-container matColumnDef="nome">
-                                        <th mat-header-cell *matHeaderCellDef> Nome </th>
-                                        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="email">
-                                        <th mat-header-cell *matHeaderCellDef> Email </th>
-                                        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-                    </ng-container>
-                    <ng-container matColumnDef="telefone">
-                                        <th mat-header-cell *matHeaderCellDef> Email </th>
-                                        <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
-                    </ng-container>
+    <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    </ng-container>
+    <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    </ng-container>
+    <ng-container matColumnDef="telefone">
+        <th mat-header-cell *matHeaderCellDef> Telefone </th>
+        <td mat-cell *matCellDef="let element"> {{element.telefone}} </td>
+    </ng-container>
 
-                    <ng-container matColumnDef="rua">
-                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
-                                        <td mat-cell *matCellDef="let element">
-                                                            {{element.endereco.rua}} </td>
-                    </ng-container>
+    <ng-container matColumnDef="rua">
+        <th mat-header-cell *matHeaderCellDef> Rua </th>
+        <td mat-cell *matCellDef="let element">
+            {{element.endereco.rua}} </td>
+    </ng-container>
 
-                    <ng-container matColumnDef="CEP">
-                                        <th mat-header-cell *matHeaderCellDef> Cep </th>
-                                        <td mat-cell *matCellDef="let element">
-                                                            {{element.endereco.cep}} </td>
-                    </ng-container>
+    <ng-container matColumnDef="CEP">
+        <th mat-header-cell *matHeaderCellDef> Cep </th>
+        <td mat-cell *matCellDef="let element">
+            {{element.endereco.cep}} </td>
+    </ng-container>
 
-                    <ng-container matColumnDef="cidade">
-                                        <th mat-header-cell *matHeaderCellDef> Cidade </th>
-                                        <td mat-cell *matCellDef="let element">
-                                                            {{element.endereco.cidade}} </td>
-                    </ng-container>
+    <ng-container matColumnDef="cidade">
+        <th mat-header-cell *matHeaderCellDef> Cidade </th>
+        <td mat-cell *matCellDef="let element">
+            {{element.endereco.cidade}} </td>
+    </ng-container>
 
-                    <ng-container matColumnDef="estado">
-                                        <th mat-header-cell *matHeaderCellDef> Rua </th>
-                                        <td mat-cell *matCellDef="let element">
-                                                            {{element.rua}} </td>
-                    </ng-container>
+    <ng-container matColumnDef="estado">
+        <th mat-header-cell *matHeaderCellDef> Estado </th>
+        <td mat-cell *matCellDef="let element">
+            {{element.endereco.estado}} </td>
+    </ng-container>
 
-                    <ng-container matColumnDef="Edit">
-                                        <th mat-header-cell *matHeaderCellDef> Ações </th>
-                                        <td mat-cell *matCellDef="let element">
-                                                            <button mat-flat-button color=""
-                                                                                (click)="EditDialog(element)">Editar</button>
-                                                            <button mat-flat-button color="warn"
-                                                                                (click)="deletaCliente(element)">Deletar</button>
-                                        </td>
-                    </ng-container>
+    <ng-container matColumnDef="Edit">
+        <th mat-header-cell *matHeaderCellDef> Ações </th>
+        <td mat-cell *matCellDef="let element">
+            <button mat-flat-button (click)="EditDialog(element)">Editar</button>
+            <button mat-flat-button color="warn" (click)="deletaCliente(element)">Deletar</button>
+        </td>
+    </ng-container>
 
-                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
