Criando bloqueio de acesso quando o usuario estiver logado na aplicação

--- a/Front/Cliente/ControlSystem/src/app/module/access/access.component.html
+++ b/Front/Cliente/ControlSystem/src/app/module/access/access.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="w-100 h-100">
-    <mat-sidenav mode="side" opened class="ajuste">
+    <mat-sidenav mode="side" opened="true" class="ajuste cinza">
         <app-menu></app-menu>
     </mat-sidenav>
     <mat-sidenav-content>
