--- a/Front/Cliente/ControlSystem/src/app/page/home/home.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/home/home.component.html
@@ -1,1 +1,7 @@
-Home
+<div *ngFor="let item of HomeConfig">
+    <mat-card class="div">
+        <div class="teste">
+            <button  mat-button (click)="onClick(item.route)">{{item.nomeButton}}</button>
+        </div>
+    </mat-card>
+</div>
