adicao de usuario com role e algumas validações para inclusao e alteração

--- a/Front/Cliente/ControlSystem/src/app/module/users/form-user/form-user.component.html
+++ b/Front/Cliente/ControlSystem/src/app/module/users/form-user/form-user.component.html
@@ -15,6 +15,8 @@
         <input matInput formControlName="email" type="email" placeholder="Seu email aqui">
     </mat-form-field>
     <br>
+    <app-select-role [form]="form"></app-select-role>
+    <br>
     <mat-checkbox formControlName="ativado">Ativar Conta</mat-checkbox>
     <br>
     <mat-form-field class="invisible" hidden>
