--- a/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
+++ b/Front/Cliente/ControlSystem/src/app/page/gerencia-user/gerencia-user.component.html
@@ -7,9 +7,13 @@
       <th mat-header-cell *matHeaderCellDef> Nome </th>
       <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
     </ng-container> 
-    <ng-container matColumnDef="senha">
+    <!-- <ng-container matColumnDef="senha">
       <th mat-header-cell *matHeaderCellDef> Senha </th>
       <td mat-cell *matCellDef="let element"> {{element.senha}} </td>
+    </ng-container> -->
+    <ng-container matColumnDef="role">
+      <th mat-header-cell *matHeaderCellDef> Role </th>
+      <td mat-cell *matCellDef="let element"> {{element.roleString}} </td>
     </ng-container>
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef> Email </th>
