--- a/Front/Cliente/ControlSystem/src/app/module/access/access.component.html
+++ b/Front/Cliente/ControlSystem/src/app/module/access/access.component.html
@@ -1,6 +1,7 @@
 <mat-sidenav-container class="w-100 h-100">
     <mat-sidenav mode="side" opened="true" class="ajuste cinza">
         <app-menu></app-menu>
+        <app-sair></app-sair>
     </mat-sidenav>
     <mat-sidenav-content>
         <router-outlet></router-outlet>
