adição de request de validação e mudança de pagina, contruindo pagina de Dashboard

--- a/Front/Cliente/helpclient/src/Componentes/Loguin/Inputs/index.css
+++ b/Front/Cliente/helpclient/src/Componentes/Loguin/Inputs/index.css
@@ -9,6 +9,8 @@
     margin-top: 2%;
     border-radius: 5%;
     width: 40%;
+    padding: 5%;
+    font-size: medium;
     color: black;
     background: white;
     border: none;
@@ -16,4 +18,9 @@
 
 .input-envio{
     margin:1%;
+    padding: 5%;
+    font-size: medium;
+    background-color: lightblue;
+    border: none;
+    cursor: pointer;
 }
